# membrs

./: .gitignore  Cargo.toml  INSTALL.md  README.md  compose.yaml  example.env  nginx.conf
.github/workflows/: gh-release.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  example.env
backend/discord_lib/: Cargo.toml  LICENSE-MIT  README.md
backend/discord_lib/src/: api.rs
backend/discord_lib/src/bot/: mod.rs
backend/discord_lib/src/model/: mod.rs  oauth.rs  user.rs
backend/discord_lib/src/oauth/: mod.rs  requests.rs  url.rs
backend/lib/src/oauth/: mod.rs  url.rs
backend/membrs_lib/: Cargo.toml  README.md
backend/membrs_lib/src/: api.rs  lib.rs
backend/membrs_lib/src/bot/: mod.rs
backend/membrs_lib/src/model/: bot.rs  guild.rs  mod.rs  oauth.rs  user.rs
backend/membrs_lib/src/oauth/: mod.rs  url.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs  routes.rs
backend/server/src/db/: application_data.rs  mod.rs  superuser.rs  users.rs
backend/server/src/handlers/: index.html  mod.rs  oauth.rs  superuser.rs
backend/src/: app_state.rs  main.rs  routes.rs
backend/src/db/: application_data.rs  mod.rs  superuser.rs  users.rs
backend/src/handlers/: index.html  oauth.rs  superuser.rs
backend/src/routes/: mod.rs
backend/src/routes/handlers/: index.html  mod.rs  oauth.rs  superuser.rs  users.rs
backend/src/routes/handlers/superuser/: mod.rs
frontend/: Cargo.toml  Dockerfile  README.md  envConfig.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: styles.css
frontend/src/: main.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/admin/components/: dropDown.tsx  guild-select.tsx  login.tsx  sidebar-nav.tsx  update_user.tsx  useOutsideClick.tsx
frontend/src/app/admin/settings/: page.tsx  settings-form.tsx
frontend/src/app/admin/users/: UserTable.tsx  page.tsx
frontend/src/app/complete/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/login/complete/: page.tsx
frontend/src/app/sections/: faq.tsx  features.tsx  footer.tsx  hero.tsx  howItWorks.tsx  navigation.tsx  pricing.tsx
frontend/src/components/: button.tsx  copy.tsx  pricing-plan-card.tsx  redirect-popup.tsx  theme-provider.tsx
frontend/src/components/ui/: command.tsx
installer/: Cargo.toml  README.md  build.rs
installer/src/: main.rs
installer/src/dependency/: mod.rs
installer/src/installer/: mod.rs
installer/src/manager/: mod.rs
installer/src/nginx/: nginx_template.conf
installer/src/package/: mod.rs
lib/: Cargo.toml  README.md
lib/src/bot/: mod.rs
lib/src/model/: oauth.rs
lib/src/oauth/: mod.rs  requests.rs
membrs/: Cargo.toml  build.rs
membrs/src/: main.rs
membrs/src/dependency/: mod.rs
membrs/src/installer/: mod.rs
membrs/src/manager/: mod.rs
membrs/src/nginx/: mod.rs
membrs/src/package/: mod.rs
scripts/: download_start.sh
src/: api.rs  lib.rs
src/model/: guild.rs  mod.rs  user.rs
src/oauth/: mod.rs  url.rs
