[package]
name = "membrs"
version = "0.1.0"
edition = "2021"

authors = ["Arteii <ben.arteii@proton.me>"]

license = "AGPL-3"


[lib]
name = "membrs_lib"
path = "src/lib.rs"

[features]
default = ["bot", "oauth"]

bot = []
oauth = []

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.201", features = ["derive", ] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.117"
urlencoding = "2.1.3"
