[package]
name = "membrs-backend"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Arteii <ben.arteii@proton.me>"]
license = "AGPL-3"
readme = "README.md"

[dependencies]
# config:
dotenv = "0.15.0"

# debug tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# runtime:
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }

# server:
axum = { version = "0.7.5", features = ["json", "multipart"] }
tower = { version = "0.4.13", features = ["load-shed", "limit"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "timeout"] }

# json:
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

# db:
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time", "chrono"] }

membrs_lib = { path = "../lib" }
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4.38"
time = "0.3.36"
hyper = "1.3.1"
base64 = "0.22.1"
rand = "0.8.5"
