[package]
name = "discord_lib"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Arteii <ben.arteii@proton.me>"]
license = "MIT"
readme = "README.md"


[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }

tracing = "0.1.40"
serde = { version = "1.0.201", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.117"
urlencoding = "2.1.3"


[features]
default = ["bot", "oauth"]

bot = []
oauth = []
